--- a/index.html
+++ b/index.html
@@ -416,7 +416,17 @@
              <li data-ev="7.8810"><span class="bigfont1" aria-label="ionization energy 7 . 8 8 1 0">7.8810</span></li> 
           </ul>
       </td>
-      <td>Row 4, Cell 9</td>
+      <td id="nickel" class="solids" tabindex="0">
+           <ul>
+            <ul>
+             <li data-atomicnumber="28"><span class="bigfont1" aria-label="atomic number 28">28</span></li>
+             <li data-symbol="ni" aria-label="atomic symbol N i " class="bigfont2">N<span class="letter-tight">i</span></li>
+             <li data-element="nickel"><span class="bigfont1" aria-label="element">Nickel</span></li>
+             <li data-weight="58.693"><span class="bigfont1" aria-label="standard atomic weight 58 . 6 9 3">58.693</span></li>
+             <li data-groundstate="nickel"><span class="bigfont1" aria-label="ground TBD">TBD</span></li>
+             <li data-ev="7.6399"><span class="bigfont1" aria-label="ionization energy 7 . 6 3 9 9">7.6399</span></li> 
+          </ul>
+      </td>
       <td>Row 4, Cell 10</td>
       <td>Row 4, Cell 11</td>
       <td>Row 4, Cell 12</td>
