--- a/index_backup1.html
+++ b/index_backup1.html
@@ -728,8 +728,26 @@
              <li data-ev="7.8335"><span class="bigfont1" aria-label="ionization energy 7 . 8 3 3 5">7.8335</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 8</td>
-      <td>Row 6, Cell 9</td>
+      <td id="osmium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="76"><span class="bigfont1" aria-label="atomic number 76">76</span></li>
+             <li data-symbol="O s" aria-label="atomic symbol O s" class="bigfont2">O<span class="letter-tight">s</span></li>
+             <li data-element="osmium"><span class="bigfont1" aria-label="element">Osmium</span></li>
+             <li data-weight="190.23"><span class="bigfont1" aria-label="standard atomic weight  190 . 2 3">190.23</span></li>
+             <li data-groundstate="osmium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 6 6s2">[Xe]4f<sup>14</sup>5d<sup>6</sup>6s<sup>2</sup><span></li>
+             <li data-ev="8.4382"><span class="bigfont1" aria-label="ionization energy 8 . 4 3 8 2">8.4382</span></li> 
+          </ul>
+      </td>
+      <td id="iridium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="77"><span class="bigfont1" aria-label="atomic number 77">77</span></li>
+             <li data-symbol="I r" aria-label="atomic symbol I r" class="bigfont2">I<span class="letter-tight">r</span></li>
+             <li data-element="iridium"><span class="bigfont1" aria-label="element">Iridium</span></li>
+             <li data-weight="192.22"><span class="bigfont1" aria-label="standard atomic weight 192 . 2 2">192.22</span></li>
+             <li data-groundstate="iridium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 7 6s2">[Xe]4f<sup>14</sup>5d<sup>7</sup>6s<sup>2</sup><span></li>
+             <li data-ev="8.9670"><span class="bigfont1" aria-label="ionization energy 8 . 9 6 7 0">8.9670</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 10</td>
       <td>Row 6, Cell 11</td>
       <td>Row 6, Cell 12</td>
