--- a/index_backup2.html
+++ b/index_backup2.html
@@ -758,8 +758,26 @@
              <li data-ev="8.9588"><span class="bigfont1" aria-label="ionization energy 8 . 9 5 8 8">8.9588</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 11</td>
-      <td>Row 6, Cell 12</td>
+       <td id="gold" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="79"><span class="bigfont1" aria-label="atomic number 79">79</span></li>
+             <li data-symbol="A u" aria-label="atomic symbol A u" class="bigfont2">A<span class="letter-tight">u</span></li>
+             <li data-element="gold"><span class="bigfont1" aria-label="element">Gold</span></li>
+             <li data-weight="196.97"><span class="bigfont1" aria-label="standard atomic weight 196 . 9 7">196.97</span></li>
+             <li data-groundstate="gold"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s</li>
+             <li data-ev="9.2256"><span class="bigfont1" aria-label="ionization energy 9 . 2 2 5 6">9.2256</span></li> 
+          </ul>
+      </td>
+      <td id="mercury" class="liquids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="80"><span class="bigfont1" aria-label="atomic number 80">80</span></li>
+             <li data-symbol="H g" aria-label="atomic symbol H g" class="bigfont2">H<span class="letter-tight">g</span></li>
+             <li data-element="mercury"><span class="bigfont1" aria-label="element">Mercury</span></li>
+             <li data-weight="200.59"><span class="bigfont1" aria-label="standard atomic weight 200 . 5 9">200.59</span></li>
+             <li data-groundstate="mercury"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s 2">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s<sup>2</sup></li>
+             <li data-ev="10.4375"><span class="bigfont1" aria-label="ionization energy 10 . 4 3 7 5">10.4375</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 13</td>
       <td>Row 6, Cell 14</td>
       <td>Row 6, Cell 15</td>
@@ -835,7 +853,7 @@
     <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 3 December 2019<br />
+        Content: 4 December 2019<br />
         WebAim: 2 December 2019 0<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
