--- a/index_backup1.html
+++ b/index_backup1.html
@@ -768,8 +768,26 @@
              <li data-ev="9.2256"><span class="bigfont1" aria-label="ionization energy 9 . 2 2 5 6">9.2256</span></li> 
           </ul>
       </td>
-      <td>Row 6, Cell 12</td>
-      <td>Row 6, Cell 13</td>
+      <td id="mercury" class="liquids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="80"><span class="bigfont1" aria-label="atomic number 80">80</span></li>
+             <li data-symbol="H g" aria-label="atomic symbol H g" class="bigfont2">H<span class="letter-tight">g</span></li>
+             <li data-element="mercury"><span class="bigfont1" aria-label="element">Mercury</span></li>
+             <li data-weight="200.59"><span class="bigfont1" aria-label="standard atomic weight 200 . 5 9">200.59</span></li>
+             <li data-groundstate="mercury"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s 2">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s<sup>2</sup></li>
+             <li data-ev="10.4375"><span class="bigfont1" aria-label="ionization energy 10 . 4 3 7 5">10.4375</span></li> 
+          </ul>
+      </td>
+      <td id="thallium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="81"><span class="bigfont1" aria-label="atomic number 81">81</span></li>
+             <li data-symbol="T i" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
+             <li data-element="thallium"><span class="bigfont1" aria-label="element">Thallium</span></li>
+             <li data-weight="204.38"><span class="bigfont1" aria-label="standard atomic weight 204 . 3 8">204.38</span></li>
+             <li data-groundstate="thallium"><span class="bigfont1" aria-label="ground [Hg]6p">[Hg]6p</li>
+             <li data-ev="6.1083"><span class="bigfont1" aria-label="ionization energy 6 . 1 0 8 3">6.1083</span></li> 
+          </ul>
+      </td>
       <td>Row 6, Cell 14</td>
       <td>Row 6, Cell 15</td>
       <td>Row 6, Cell 16</td>
