--- a/index_backup2.html
+++ b/index_backup2.html
@@ -841,7 +841,7 @@
     </tr>
     <tr>
     <td id="francium" class="solids" tabindex="0">
-            <ul>
+           <ul>
              <li data-atomicnumber="87"><span class="bigfont1" aria-label="atomic number 87">87</span></li>
              <li data-symbol="F r" aria-label="atomic symbol F r" class="bigfont2">F<span class="letter-tight">r</span></li>
              <li data-element="francium"><span class="bigfont1" aria-label="element">Francium</span></li>
@@ -951,12 +951,66 @@
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
-      <td>Row 7, Cell 13</td>
-      <td>Row 7, Cell 14</td>
-      <td>Row 7, Cell 15</td>
-      <td>Row 7, Cell 16</td>
-      <td>Row 7, Cell 17</td>
-      <td>Row 7, Cell 18</td>
+      <td id="nihonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="113"><span class="bigfont1" aria-label="atomic number 113">113</span></li>
+             <li data-symbol="N h" aria-label="atomic symbol N h" class="bigfont2">N<span class="letter-tight">h</span></li>
+             <li data-element="nihonium"><span class="bigfont1" aria-label="element">Nihonium</span></li>
+             <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
+             <li data-groundstate="nihonium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id="flerovium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="114"><span class="bigfont1" aria-label="atomic number 114">114</span></li>
+             <li data-symbol="F l" aria-label="atomic symbol F l" class="bigfont2">F<span class="letter-tight">l</span></li>
+             <li data-element="flerovium"><span class="bigfont1" aria-label="element">Flerovium</span></li>
+             <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
+             <li data-groundstate="flerovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id="moscovium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="115"><span class="bigfont1" aria-label="atomic number 115">115</span></li>
+             <li data-symbol="M c" aria-label="atomic symbol M c" class="bigfont2">M<span class="letter-tight">c</span></li>
+             <li data-element=" moscovium"><span class="bigfont1" aria-label="element"> Moscovium</span></li>
+             <li data-weight="(289)"><span class="bigfont1" aria-label="standard atomic weight (289)">(289)</span></li>
+             <li data-groundstate="moscovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+      <td id="livermorium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="116"><span class="bigfont1" aria-label="atomic number 116">116</span></li>
+             <li data-symbol="L v" aria-label="atomic symbol L v" class="bigfont2">L<span class="letter-tight">v</span></li>
+             <li data-element="livermorium"><span class="bigfont1" aria-label="element">Livermorium</span></li>
+             <li data-weight="(293)"><span class="bigfont1" aria-label="standard atomic weight (293)">(293)</span></li>
+             <li data-groundstate="livermorium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+       <td id="tennessine" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="117"><span class="bigfont1" aria-label="atomic number 117">117</span></li>
+             <li data-symbol="T s" aria-label="atomic symbol T s" class="bigfont2">T<span class="letter-tight">s</span></li>
+             <li data-element="tennessine"><span class="bigfont1" aria-label="element">Tennessine</span></li>
+             <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
+             <li data-groundstate="tennessine"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
+       <td id="oganesson" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="118"><span class="bigfont1" aria-label="atomic number 118">118</span></li>
+             <li data-symbol="O g" aria-label="atomic symbol O g" class="bigfont2">O<span class="letter-tight">g</span></li>
+             <li data-element="oganesson"><span class="bigfont1" aria-label="element">Oganesson</span></li>
+             <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
+             <li data-groundstate="oganesson"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
+          </ul>
+      </td>
     </tr>
     <tr style="margin-top:50px;">
       <td class="hidden">Row 8, Cell 1</td>
