--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1041,13 +1041,40 @@
              <li data-symbol="P r" aria-label="atomic symbol P r" class="bigfont2">P<span class="letter-tight">r</span></li>
              <li data-element="praseodymium"><span class="bigfont1" aria-label="element">Praseodymium</span></li>
              <li data-weight="140.91"><span class="bigfont1" aria-label="standard atomic weight  140 . 9 1">140.91</span></li>
-             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground[Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground [Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
              <li data-ev="5.4702"><span class="bigfont1" aria-label="ionization energy 5 . 4 7 0 2">5.4702</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 6</td>
-      <td>Row 8, Cell 7</td>
-      <td>Row 8, Cell 8</td>
+       <td id="neodymium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="60"><span class="bigfont1" aria-label="atomic number 60">60</span></li>
+             <li data-symbol="N d" aria-label="atomic symbol N d" class="bigfont2">N<span class="letter-tight">d</span></li>
+             <li data-element="neodymium"><span class="bigfont1" aria-label="element">Neodymium</span></li>
+             <li data-weight="144.24"><span class="bigfont1" aria-label="standard atomic weight  144 . 2 4">144.24</span></li>
+             <li data-groundstate="neodymium"><span class="bigfont1" aria-label="ground [Xe]4f 4 6s 2">[Xe]4f <sup>4</sup> 6s <sup>2</sup> <span></li>
+             <li data-ev="5.5250"><span class="bigfont1" aria-label="ionization energy 5 . 5 2 5 0">5.5250</span></li> 
+          </ul>
+      </td>
+      <td id="promethium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="61"><span class="bigfont1" aria-label="atomic number 61">61</span></li>
+             <li data-symbol="P m" aria-label="atomic symbol P m" class="bigfont2">P<span class="letter-tight">m</span></li>
+             <li data-element="promethium"><span class="bigfont1" aria-label="element">Promethium</span></li>
+             <li data-weight="(145)"><span class="bigfont1" aria-label="standard atomic weight  (145)">(145)</span></li>
+             <li data-groundstate="promethium"><span class="bigfont1" aria-label="ground [Xe]4f 5 6s 2">[Xe]4f <sup>5</sup> 6s <sup>2</sup> <span></li>
+             <li data-ev="5.577"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 7 0">5.577</span></li> 
+          </ul>
+      </td>
+       <td id="samarium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="62"><span class="bigfont1" aria-label="atomic number 62">62</span></li>
+             <li data-symbol="S m" aria-label="atomic symbol S m" class="bigfont2">S<span class="letter-tight">m</span></li>
+             <li data-element="samarium"><span class="bigfont1" aria-label="element">Samarium</span></li>
+             <li data-weight="150.36"><span class="bigfont1" aria-label="standard atomic weight 150 . 3 6">150.36</span></li>
+             <li data-groundstate="samarium"><span class="bigfont1" aria-label="ground [Xe]4f 6 6s 2">[Xe]4f <sup>6</sup> 6s<sup>2</sup> <span></li>
+             <li data-ev="5.6437"><span class="bigfont1" aria-label="ionization energy 5 . 6 4 3 7">5.6437</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 9</td>
       <td>Row 8, Cell 10</td>
       <td>Row 8, Cell 11</td>
