--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1055,9 +1055,36 @@
              <li data-ev="5.5250"><span class="bigfont1" aria-label="ionization energy 5 . 5 2 5 0">5.5250</span></li> 
           </ul>
       </td>
-      <td>Row 8, Cell 7</td>
-      <td>Row 8, Cell 8</td>
-      <td>Row 8, Cell 9</td>
+      <td id="promethium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="61"><span class="bigfont1" aria-label="atomic number 61">61</span></li>
+             <li data-symbol="P m" aria-label="atomic symbol P m" class="bigfont2">P<span class="letter-tight">m</span></li>
+             <li data-element="promethium"><span class="bigfont1" aria-label="element">Promethium</span></li>
+             <li data-weight="(145)"><span class="bigfont1" aria-label="standard atomic weight  (145)">(145)</span></li>
+             <li data-groundstate="promethium"><span class="bigfont1" aria-label="ground [Xe]4f 5 6s 2">[Xe]4f <sup>5</sup> 6s <sup>2</sup> <span></li>
+             <li data-ev="5.577"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 7 0">5.577</span></li> 
+          </ul>
+      </td>
+       <td id="samarium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="62"><span class="bigfont1" aria-label="atomic number 62">62</span></li>
+             <li data-symbol="S m" aria-label="atomic symbol S m" class="bigfont2">S<span class="letter-tight">m</span></li>
+             <li data-element="samarium"><span class="bigfont1" aria-label="element">Samarium</span></li>
+             <li data-weight="150.36"><span class="bigfont1" aria-label="standard atomic weight 150 . 3 6">150.36</span></li>
+             <li data-groundstate="samarium"><span class="bigfont1" aria-label="ground [Xe]4f 6 6s 2">[Xe]4f <sup>6</sup> 6s<sup>2</sup> <span></li>
+             <li data-ev="5.6437"><span class="bigfont1" aria-label="ionization energy 5 . 6 4 3 7">5.6437</span></li> 
+          </ul>
+      </td>
+       <td id="europium" class="solids" tabindex="0">
+            <ul>
+             <li data-atomicnumber="63"><span class="bigfont1" aria-label="atomic number 63">63</span></li>
+             <li data-symbol="E u" aria-label="atomic symbol E u" class="bigfont2">E<span class="letter-tight">u</span></li>
+             <li data-element="europium"><span class="bigfont1" aria-label="element">Europium</span></li>
+             <li data-weight="151.96"><span class="bigfont1" aria-label="standard atomic weight 151 . 9 6">151.96</span></li>
+             <li data-groundstate="europium"><span class="bigfont1" aria-label="ground [Xe]4f 7 6s 2">[Xe]4f <sup>7</sup> 6s<sup>2</sup> <span></li>
+             <li data-ev="5.6704"><span class="bigfont1" aria-label="ionization energy 5 . 6 7 0 4">5.6704</span></li> 
+          </ul>
+      </td>
       <td>Row 8, Cell 10</td>
       <td>Row 8, Cell 11</td>
       <td>Row 8, Cell 12</td>
