--- a/index_backup1.html
+++ b/index_backup1.html
@@ -49,8 +49,10 @@
 </div>
 
 <div class="left100 bottom50">
+   <h2 style="font-size:3em;">UNDER DEVELOPMENT</h2>
  <label for="search_field_input">Search Elements (Alphabetical Search):</label>
- <input id="search_field_input" onkeyup="search_table()" type="text">
+ <input id="search_field_input" onkeyup="search_periodic()" type="text">
+   <div id="response">Response</div>
 </div>
 <!-- IMPORTANT do not change ARIA LABEL.  The aria-label is used to over-ride screen reader mispronunciation of numbers with decimals in them as they apply to atomic weights It is not the desired user experience to have the screen reader read the numbers as thousands--> 
 <!-- Excerpt from https://www.w3.org/TR/wai-aria/#aria-label If the label text is visible on screen, authors SHOULD use aria-labelledby and SHOULD NOT use aria-label. There may be instances where the name of an element cannot be determined programmatically from the content of the element, and there are cases where providing a visible label is not the desired user experience. -->    
@@ -1140,31 +1142,24 @@
 </footer>
   <!-- https://stackoverflow.com/questions/9127498/how-to-perform-a-real-time-search-and-filter-on-a-html-table -->
 <script>
-function search_table(){
-  // Declare variables 
-  var input, filter, table, tr, td, i;
-  input = document.getElementById("search_field_input");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("table_id");
-  tr = table.getElementsByTagName("tr");
+function search_periodic(){
+var letter = document.getElementById("search_field_input").value;
+var text;
 
-  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td") ; 
-    for(j=0 ; j<td.length ; j++)
-    {
-      let tdata = td[j] ;
-      if (tdata) {
-        if (tdata.innerHTML.toUpperCase().indexOf(filter) > -1) {
-          tr[i].style.display = "";
-          break ; 
-        } else {
-          tr[i].style.display = "none";
-        }
-      } 
-    }
-  }
+   // If the letter is "c"
+   if (letter === "c") {
+     text = "Spot on! Good job!";
+
+   // If the letter is "b" or "d"
+   } else if (letter === "b" || letter === "d") {
+     text = "Close, but not close enough.";
+
+   // If the letter is anything else
+   } else {
+     text = "Waaay off..";
+   }
+document.getElementById("response").innerHTML = text;
 }
 </script> 
- </body>   
+</body>   
 </html>
