--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,11 @@ var text;
 
    // If the letter is "c"
    if (letters === "Hydrogen") {
-     text = "Hydrogen" + "<br/>" + "Standard Atomic Weight: 1.008";
+     text = "Hydrogen" 
+        + "<br/>" 
+        + "Atomic Number: 1"  + "<br />
+        + "Standard Atomic Weight: 1.008"  + "<br />
+        + "<br />;
 
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
