--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,7 @@ var text;
         + "<br/>" 
         + "Atomic Number: 1"  + "<br/>"
         + "Standard Atomic Weight: 1.008"  + "<br/>"
+        + "Ground State Configuration: 1s"  + "<br/>"
         + "<br/>";
 
    // If the letter is "b" or "d"
